# motion_anomaly_detection

./: .gitmodules  README.md  _config.yml  index.md  main.py  requirements.txt
_layouts/: default.html
_sass/: jekyll-theme-dinky.scss
apps/camera_motion/: CMakeLists.txt  README.md
apps/camera_motion/scripts/: compute_expected_pixel_motion.py
apps/camera_motion/src/: compute_image_motion.cpp
apps/optical_flow/: CMakeLists.txt  README.md
apps/optical_flow/scripts/: calc_optical_flow.sh
apps/optical_flow/src/: calculate_optical_flow.cpp
apps/robot_render/: README.md  render_robot_body.py  rgb_camera_calibration.txt
assets/css/: style.scss
datasets/: optical_flow_dataset.py
models/: unet_trainer.py
models/probabilistic_unet/: README.md  probabilistic_unet.py  unet.py  unet_blocks.py  utils.py
